
2004/05/26: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in MsgEngine (strchr doens't like if the character
  searched for is \0, which is a valid character when reading binary
  data such as bytes, words, dwords etc which are used by 
  Libchipcard2)


2004/05/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/msgengine.c: fixed a bug which occurred if "maxnum" was
  zero in XML files


2004/05/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/text: added function GWEN_Text_FromHexBuffer


2004/05/21: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/logger.c: fixed a severe bug (trapped into endless loop when
  log level was "debug")


2004/05/20: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/xml: added a usage counter and some functions around it to be
  used by an application (not used internally, but they allow marking
  and detection of unused nodes)


2004/05/18: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/msgengine: switched inherit code to new gwenhywfar/inherit 
  type
- parser/text: added function GWEN_Text_ToHexBuffer


2004/05/17: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/ipc: more fixes
- removed some debug messages


2004/05/16: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/logger.c: fixed a buffer overflow bug
- ipc/ipc.c: more fixes and minor modifications
- parser/text: added functions to log a string
- base/logger: improved logging, fixed some bugs


2004/05/14: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/ipc.{c,h}: fixed some bugs


2004/05/13: Martin Preuss<martin@libchipcard.de>